--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,3 +64,8 @@ flutter:
   assets:
     - images/
 
+  fonts:
+    - family: Spartan MB
+      fonts:
+        - asset: fonts/SpartanMB-Black.otf
+          weight: 900
